movement done + modified kalamn demo

--- a/kalman_temp.ipynb
+++ b/kalman_temp.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filtering\n",
+    "### Filtering\n",
     "The filtering was done using a Kalman Filter. We designed it to use the position and the angle given by the camera as measurement and the speed of the robot, given by the sensors of the wheels, as prediction. For simplicity of use, we decided to create a Kalman_Filter class, so we would have less arguments to give to each functions. However, this class needs to have access to the class Vision and to be given the speed of the robot to work properly.  \n"
    ]
   },
@@ -26,7 +26,7 @@
     }
    },
    "source": [
-    "### Equations\n",
+    "#### Equations\n",
     "The Kalman filter merge together a prediction of the future state of the system with a measure of these states to be more precise. The prediction is govern by the system equations. In this section, we are going to describe the equations used in the model and the ones used to implement the merging part of the filter. \n",
     "First, we need to convert the informations we get from the sensors to something we can use:\n",
     "$v = (v_r + v_l)/2$. This is the translational speed and $w = (v_r - v_l)/b$, which is the rotationnal speed. $v_r$ is the speed of the right wheel, $v_l$ the left one and $b$ is the width of the robot, wheel to wheel. These speed are given in thymio units, so we need to convert them in mm or in pixels to use them with the other values. For w, we just want to change it to mm because b is given in mm and for v, the position are given in pixels unit so we have to convert it first to mm and then to pixels.\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-12T14:55:49.833569Z",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-12T14:55:50.519989Z",
@@ -99,14 +99,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Camera connected\n",
+    "##### Camera not connected\n",
+    "If the camera is not connected we set the kalman gain to 0 and therefore we do not compute $S$. For $y$, we simply set it to the last known position."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Camera connected\n",
     "If the camera is detected, we set the measurement as the values retourned by the camera, $pos_x$, $pos_y$ and $\\theta$. This will be our measurement vector $y$. We also compute the covariance matrix for measurement, $S = C * P_{est \\text{ }a\\text{ }priori} * C^T + R$, where $C$ is the matrix linking measurements and states and $R$ is the error covariance matrix for the measurement. Finally, we compute the Kalman gain, which is the gain for the measurements $K = P_{est \\text{ }a\\text{ }priori} * C^T * S^{-1}$.\n",
     "We chose to have a small R compared to Q because we want to put much more weight on the camera measurements, the speed sensors being less precise. That way, when our camera is active the kalman filter will output almost the same position as the position given by the camera. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-12T14:55:51.438358Z",
@@ -121,16 +129,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Camera not connected\n",
-    "If the camera is not connected we set the kalman gain to 0 and therefore we do not compute $S$. For $y$, we simply set it to the last known position."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-12T14:55:52.156131Z",
@@ -140,7 +140,7 @@
    "outputs": [],
    "source": [
     "if robot_detected:   \n",
-    "    y = pos\n",
+    "    y = [50.5, 60.8, 0.77]#the robot went relatively straight. Those are arbitrary values for the demo. These can be changed\n",
     "    S = np.dot(C, np.dot(P_est_a_priori, C.T)) + R\n",
     "    K = np.dot(P_est_a_priori, np.dot(C.T, np.linalg.inv(S)))\n",
     "else:\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-12T14:55:53.243962Z",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-12-12T14:59:46.695099Z",
@@ -192,18 +192,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[50.2330281  60.2330281   0.73879767] position estimée\n",
-      "[50, 60, 0.7853981633974483] position given by camera\n",
-      "[[1001.  1000.  1000. ]\n",
-      " [1000.  1001.  1000. ]\n",
-      " [1000.  1000.  1000.1]]\n"
+      "[50.69625471 60.96898199  0.7334805 ] position estimée\n",
+      "[50.5, 60.8, 0.77] position given by camera\n"
      ]
     }
    ],
    "source": [
     "print(rho_est, \"position estimée\")\n",
-    "print(pos, \"position given by camera\")"
+    "print(y, \"position given by camera\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -236,6 +240,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
