--- a/main.ipynb
+++ b/main.ipynb
@@ -36,13 +36,13 @@
    "source": [
     "Starting the project we first decided which algorithms we wanted to use. \n",
     "Concerning the global navigation, we chose to use a visibility graph combined with the Dijkstra algorithm to find the shortest path. \n",
-    "For the filtering part, we used a Kalman filter and for the local avoidance we used a Braintenberg approche.\n",
+    "For the filtering part, we used a Kalman filter and for the local avoidance we used a Braintenberg approach.\n",
     "We then designed the setup in which the robot would move. \n",
     "The floor is white in order to have a good contrast with the other elements. We chose red, green and blue to easily detect the elements with rgb values :\n",
     "<ul>\n",
     "<li> Red represents the robot, therefore we sticked a red triangle on top of the thymio.\n",
     "<li> Green was chosen to represent the goal.\n",
-    "<li> Blue is used to represnet the different shaped fixed obstacles.\n",
+    "<li> Blue is used to represent the different shaped fixed obstacles.\n",
     "</ul>\n",
     "We use a white cylinder as a mobile obstacle for local avoidance.<br>\n",
     "A lectern and a handcrafted cardboard arm were used in order to place the camera on top of the playing field with a centered view. \n"
@@ -425,25 +425,121 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "def compute_speed(vision, actual_pos, target_pos, min_angle, offset_speed, k_forward, k_rot, is_near_checkpoint):\n",
-    "    wheel_radius = utils.WHEEL_RADIUS_MM * vision.mm2px\n",
-    "    robot_width  = utils.THYMIO_WIDTH_MM * vision.mm2px\n",
-    "    delta_pos = target_pos - actual_pos[0:2]\n",
-    "    alpha = -actual_pos[2] + np.arctan2(delta_pos[1], delta_pos[0])\n",
-    "    alpha = (alpha + np.pi) % (2 * np.pi) - np.pi\n",
-    "    if (abs(alpha) > min_angle) & is_near_checkpoint:\n",
-    "        return [int( k_rot * alpha * robot_width / 2 / wheel_radius),\n",
-    "                int(-k_rot * alpha * robot_width / 2 / wheel_radius)]\n",
-    "    else:\n",
-    "        speed_left  = offset_speed + k_forward * alpha\n",
-    "        speed_right = offset_speed - k_forward * alpha\n",
-    "        speed = [int(speed_left), int(speed_right)]\n",
-    "        return speed"
+    "The constants were found through experimentation. The main if statement is here to differentiate two cases : \n",
+    "<ol>\n",
+    "<li>The robot is near a checkpoint and only needs to turn on itself\n",
+    "<li>The robot is not near a checkpoint and acts normally\n",
+    "\n",
+    "    \n",
+    "> They both have a proportional controller (respectively k_rot and k_forward)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### runable code (no thymio needed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this example,we can see that the speed of each motor is different because the robot needs to slightly adjust its angle in order to aim for the goal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[334, 385]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "mm2px = 0.5\n",
+    "actual_pos = np.array([50,60,np.pi/4])\n",
+    "target_pos = np.array([100,100])\n",
+    "min_angle = 0.3\n",
+    "offset_speed = 360\n",
+    "k_forward = 230\n",
+    "k_rot = 120\n",
+    "is_near_checkpoint = 0\n",
+    "WHEEL_RADIUS_MM = 44\n",
+    "THYMIO_WIDTH_MM = 100\n",
+    "\n",
+    "wheel_radius = WHEEL_RADIUS_MM * mm2px\n",
+    "robot_width  = THYMIO_WIDTH_MM * mm2px\n",
+    "delta_pos = target_pos - actual_pos[0:2]\n",
+    "alpha = -actual_pos[2] + np.arctan2(delta_pos[1], delta_pos[0])\n",
+    "alpha = (alpha + np.pi) % (2 * np.pi) - np.pi\n",
+    "if (abs(alpha) > min_angle) & is_near_checkpoint:\n",
+    "    print(int( k_rot * alpha * robot_width / 2 / wheel_radius),\n",
+    "            int(-k_rot * alpha * robot_width / 2 / wheel_radius))\n",
+    "else:\n",
+    "    speed_left  = offset_speed + k_forward * alpha\n",
+    "    speed_right = offset_speed - k_forward * alpha\n",
+    "    speed = [int(speed_left), int(speed_right)]\n",
+    "    print(speed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this second example, the robot is near its actual checkpoint and only needs to turn on itself, therfore the speeds are opposite of each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bsbsbs\n",
+      "-1.1659045405098132\n",
+      "-158 158\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "mm2px = 0.5\n",
+    "actual_pos = np.array([50,60,np.pi/4])\n",
+    "target_pos = np.array([200,0])\n",
+    "min_angle = 0.3\n",
+    "offset_speed = 360\n",
+    "k_forward = 230\n",
+    "k_rot = 120\n",
+    "is_near_checkpoint = 1\n",
+    "WHEEL_RADIUS_MM = 44\n",
+    "THYMIO_WIDTH_MM = 100\n",
+    "\n",
+    "wheel_radius = WHEEL_RADIUS_MM * mm2px\n",
+    "robot_width  = THYMIO_WIDTH_MM * mm2px\n",
+    "delta_pos = target_pos - actual_pos[0:2]\n",
+    "alpha = -actual_pos[2] + np.arctan2(delta_pos[1], delta_pos[0])\n",
+    "alpha = (alpha + np.pi) % (2 * np.pi) - np.pi\n",
+    "if (abs(alpha) > min_angle) & is_near_checkpoint:\n",
+    "    print(int( k_rot * alpha * robot_width / 2 / wheel_radius),\n",
+    "            int(-k_rot * alpha * robot_width / 2 / wheel_radius))\n",
+    "else:\n",
+    "    speed_left  = offset_speed + k_forward * alpha\n",
+    "    speed_right = offset_speed - k_forward * alpha\n",
+    "    speed = [int(speed_left), int(speed_right)]\n",
+    "    print(speed)\n"
    ]
   },
   {
@@ -950,27 +1046,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
@@ -997,16 +1072,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this project we have created different components that are vision, flitering, motion control, global and local navigation, and correctly connected them whith each other. Our project is functional and the thymio is capable of reaching its objective, while staying on the optimal path and avoiding obstacles through global navigation and local avoidance. We have been able to put in practice different techniques we have seen during the semester in the Basics Of Mobile Robotics course. <br>\n",
+    "In this project we have created different components that are vision, flitering, motion control, global and local navigation, and correctly connected them with each other. Our project is functional and the thymio is capable of reaching its objective, while staying on the optimal path and avoiding obstacles through global navigation and local avoidance. We have been able to put in practice different techniques we have seen during the semester in the Basics Of Mobile Robotics course. <br>\n",
     "It was an interesting project both in terms of techincal aspects and in term of organisation : creating from the ground up an entire project on a relatively short period of time required us to do some compromises. Nontheless the project works well on a wide variety of tests.   "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
