--- a/main.ipynb
+++ b/main.ipynb
@@ -819,7 +819,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Filtering\n",
+    "### Filtering\n",
     "The filtering was done using a Kalman Filter. We designed it to use the position and the angle given by the camera as measurement and the speed of the robot, given by the sensors of the wheels, as prediction. For simplicity of use, we decided to create a Kalman_Filter class, so we would have less arguments to give to each functions. However, this class needs to have access to the class Vision and to be given the speed of the robot to work properly.\n"
    ]
   },
@@ -827,7 +827,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Equations\n",
+    "#### Equations\n",
     "The Kalman filter merge together a prediction of the future state of the system with a measure of these states to be more precise. The prediction is govern by the system equations. In this section, we are going to describe the equations used in the model and the ones used to implement the merging part of the filter.\n",
     "First, we need to convert the informations we get from the sensors to something we can use:\n",
     "$v = (v_r + v_l)/2$. This is the translational speed and $w = (v_r - v_l)/b$, which is the rotationnal speed. $v_r$ is the speed of the right wheel, $v_l$ the left one and $b$ is the width of the robot, wheel to wheel. These speed are given in thymio units, so we need to convert them in mm or in pixels to use them with the other values. For w, we just want to change it to mm because b is given in mm and for v, the position are given in pixels unit so we have to convert it first to mm and then to pixels.\n",
